Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136942

removeMultiple fails to remove the last item in the series

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 Beta3
    • 6.8.3, 6.9.0
    • Graphs: 2D
    • None
    • 086c157f6 (dev)

      In BarSeries and PieSeries removeMultiple fails to remove the last item in the series.

        For Gerrit Dashboard: QTBUG-136942
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes