Fix the range check in removeMultiple

There was a bug in the valid range calculation logic in QBarSeries
and QPieSeries, making it impossible to use removeMultiple to
remove the last x items from the series. Removing any but the last
one worked.

Pick-to: 6.8 6.9 6.9.1
Fixes: QTBUG-136942
Change-Id: Ic36308f0561aa0c9496bce41381bea27aa38a5f2

Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>